// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with custom props 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div v-tour-alarmsExpandPanel-step-2"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
          >
            alarmList.tabs.moreInfos
          </a>
        </div>
        <div
          class="v-tabs__div v-tour-alarmsExpandPanel-step-3"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.timeLine
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            common.pbehavior:2
          </a>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <more-infos-stub
                    alarm="[object Object]"
                    template="template"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <time-line-stub
                    alarm="[object Object]"
                    hidegroups="true"
                    widget="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with full alarm 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
          >
            alarmList.tabs.moreInfos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.timeLine
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            common.pbehavior:2
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.alarmsCauses
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.alarmsConsequences
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.trackSource
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.impactChain
          </a>
        </div>
        <!---->
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <more-infos-stub
                    alarm="[object Object]"
                    template="template"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <time-line-stub
                    alarm="[object Object]"
                    widget="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <group-alarms-list-stub
                    alarm="[object Object]"
                    defaultqueryid="causes_alarm-id"
                    tabid="causes_alarm-id"
                    widget="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <group-alarms-list-stub
                    alarm="[object Object]"
                    defaultqueryid="consequences_alarm-id"
                    tabid="consequences_alarm-id"
                    widget="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <service-dependencies-stub
                    columns="[object Object]"
                    includeroot="true"
                    root="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <service-dependencies-stub
                    columns="[object Object]"
                    impact="true"
                    includeroot="true"
                    root="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with gantt 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
          >
            alarmList.tabs.moreInfos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.timeLine
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            common.pbehavior:2
          </a>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.entityGantt
          </a>
        </div>
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <more-infos-stub
                    alarm="[object Object]"
                    template="template"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <time-line-stub
                    alarm="[object Object]"
                    widget="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with required props 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
          >
            alarmList.tabs.moreInfos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            alarmList.tabs.timeLine
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            common.pbehavior:2
          </a>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <more-infos-stub
                    alarm="[object Object]"
                    template="template"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <time-line-stub
                    alarm="[object Object]"
                    widget="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout pa-3 secondary lighten-2 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
